--- a/analytics/notebooks/Testing Prometheus Queries.ipynb
+++ b/analytics/notebooks/Testing Prometheus Queries.ipynb
@@ -2,31 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "incorporated-leave",
-   "metadata": {},
    "source": [
     "# Testing Prometheus\n",
     "Mapping most important metrics to use into data analysis of JVM Footprint"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "loved-bottle",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from prometheus_api_client import PrometheusConnect\n",
-    "prom = PrometheusConnect(url=\"http://localhost:9090\", disable_ssl=True)"
-   ]
+    "prom = PrometheusConnect(url=\"http://localhost:9091\", disable_ssl=True)"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "saved-roman",
-   "metadata": {},
+   "source": [
+    "prom.all_metrics()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['cache_evictions_total',\n",
@@ -287,22 +287,22 @@
        " 'up']"
       ]
      },
-     "execution_count": 62,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 62
     }
    ],
-   "source": [
-    "prom.all_metrics()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "representative-kingdom",
-   "metadata": {},
+   "source": [
+    "#Testing\n",
+    "prom.custom_query(query=\"up\")"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'metric': {'__name__': 'up', 'instance': 'app:8080', 'job': 'testing-app'},\n",
@@ -313,65 +313,45 @@
        "  'value': [1617325355.042, '1']}]"
       ]
      },
-     "execution_count": 63,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 63
     }
    ],
-   "source": [
-    "#Testing\n",
-    "prom.custom_query(query=\"up\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "advisory-integrity",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "instance_name = 'app:8080'"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "municipal-seventh",
-   "metadata": {},
+   "source": [
+    "query = 'sum(jvm_memory_used_bytes{instance=\"%s\", area=\"heap\"})' % instance_name\n",
+    "prom.custom_query(query=query)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'metric': {}, 'value': [1617325355.798, '79783448']}]"
       ]
      },
-     "execution_count": 65,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 65
     }
    ],
-   "source": [
-    "query = 'sum(jvm_memory_used_bytes{instance=\"%s\", area=\"heap\"})' % instance_name\n",
-    "prom.custom_query(query=query)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "fifty-advantage",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'sum': 2794567000.0}"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "from datetime import datetime, timedelta\n",
     "query = 'jvm_memory_used_bytes{instance=\"%s\", area=\"heap\"}' % instance_name\n",
@@ -379,25 +359,42 @@
     "start_time = end_time - timedelta(minutes=10)\n",
     "start_time\n",
     "prom.get_metric_aggregation(query=query, operations=['sum'], start_time=start_time, end_time=end_time, step = '15')"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'sum': 2794567000.0}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 66
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "complicated-favor",
-   "metadata": {},
    "source": [
     "### JVM Memory\n",
     "Differences between used, commited and max memory\n",
     "https://stackoverflow.com/questions/41468670/difference-in-used-committed-and-max-heap-memory"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "quarterly-township",
-   "metadata": {},
+   "source": [
+    "end_time = datetime.now()\n",
+    "start_time = end_time - timedelta(minutes=10)\n",
+    "start_time\n",
+    "prom.get_metric_range_data(\"jvm_memory_used_bytes\", start_time=start_time, end_time=end_time)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'metric': {'__name__': 'jvm_memory_used_bytes',\n",
@@ -1402,25 +1399,22 @@
        "   [1617325353.707, '86694696']]}]"
       ]
      },
-     "execution_count": 67,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 67
     }
    ],
-   "source": [
-    "end_time = datetime.now()\n",
-    "start_time = end_time - timedelta(minutes=10)\n",
-    "start_time\n",
-    "prom.get_metric_range_data(\"jvm_memory_used_bytes\", start_time=start_time, end_time=end_time)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "prepared-short",
-   "metadata": {},
+   "source": [
+    "# Threads\n",
+    "prom.get_metric_range_data(\"jvm_threads_live_threads\", start_time=start_time, end_time=end_time)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'metric': {'__name__': 'jvm_threads_live_threads',\n",
@@ -1548,32 +1542,30 @@
        "   [1617325353.707, '109']]}]"
       ]
      },
-     "execution_count": 68,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 68
     }
    ],
-   "source": [
-    "# Threads\n",
-    "prom.get_metric_range_data(\"jvm_threads_live_threads\", start_time=start_time, end_time=end_time)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "adjacent-fabric",
-   "metadata": {},
    "source": [
     "### JVM Process Memory\n",
     "https://stackoverflow.com/questions/7880784/what-is-rss-and-vsz-in-linux-memory-management"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "critical-seminar",
-   "metadata": {},
+   "source": [
+    "# Virtual Set Size\n",
+    "prom.get_metric_range_data(\"process_memory_vss_bytes\", start_time=start_time, end_time=end_time)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'metric': {'__name__': 'process_memory_vss_bytes',\n",
@@ -1701,23 +1693,22 @@
        "   [1617325353.707, '1245450240']]}]"
       ]
      },
-     "execution_count": 69,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 69
     }
    ],
-   "source": [
-    "# Virtual Set Size\n",
-    "prom.get_metric_range_data(\"process_memory_vss_bytes\", start_time=start_time, end_time=end_time)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "meaning-tower",
-   "metadata": {},
+   "source": [
+    "# Resident Set Size\n",
+    "prom.get_metric_range_data(\"process_memory_rss_bytes\", start_time=start_time, end_time=end_time)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'metric': {'__name__': 'process_memory_rss_bytes',\n",
@@ -1845,23 +1836,22 @@
        "   [1617325353.707, '332980224']]}]"
       ]
      },
-     "execution_count": 70,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 70
     }
    ],
-   "source": [
-    "# Resident Set Size\n",
-    "prom.get_metric_range_data(\"process_memory_rss_bytes\", start_time=start_time, end_time=end_time)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "great-missouri",
-   "metadata": {},
+   "source": [
+    "# Swap\n",
+    "prom.get_metric_range_data(\"process_memory_swap_bytes\", start_time=start_time, end_time=end_time)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'metric': {'__name__': 'process_memory_swap_bytes',\n",
@@ -1989,31 +1979,29 @@
        "   [1617325353.707, '864256']]}]"
       ]
      },
-     "execution_count": 71,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 71
     }
    ],
-   "source": [
-    "# Swap\n",
-    "prom.get_metric_range_data(\"process_memory_swap_bytes\", start_time=start_time, end_time=end_time)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "sustainable-industry",
-   "metadata": {},
    "source": [
     "## Non Heap Memory"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "owned-science",
-   "metadata": {},
+   "source": [
+    "# Threads\n",
+    "prom.get_metric_range_data(\"process_threads\", start_time=start_time, end_time=end_time)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'metric': {'__name__': 'process_threads',\n",
@@ -2141,31 +2129,28 @@
        "   [1617325353.707, '116']]}]"
       ]
      },
-     "execution_count": 72,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 72
     }
    ],
-   "source": [
-    "# Threads\n",
-    "prom.get_metric_range_data(\"process_threads\", start_time=start_time, end_time=end_time)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "passive-glass",
-   "metadata": {},
    "source": [
     "### Classes"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "municipal-turkey",
-   "metadata": {},
+   "source": [
+    "prom.get_metric_range_data(\"jvm_classes_loaded_classes\", start_time=start_time, end_time=end_time)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'metric': {'__name__': 'jvm_classes_loaded_classes',\n",
@@ -2293,30 +2278,28 @@
        "   [1617325353.707, '15613']]}]"
       ]
      },
-     "execution_count": 73,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 73
     }
    ],
-   "source": [
-    "prom.get_metric_range_data(\"jvm_classes_loaded_classes\", start_time=start_time, end_time=end_time)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "contained-henry",
-   "metadata": {},
    "source": [
     "### Direct Buffers"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "elegant-auckland",
-   "metadata": {},
+   "source": [
+    "prom.get_metric_range_data(\"jvm_buffer_count_buffers\", start_time=start_time, end_time=end_time)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'metric': {'__name__': 'jvm_buffer_count_buffers',\n",
@@ -2569,34 +2552,29 @@
        "   [1617325353.707, '0']]}]"
       ]
      },
-     "execution_count": 74,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 74
     }
    ],
-   "source": [
-    "prom.get_metric_range_data(\"jvm_buffer_count_buffers\", start_time=start_time, end_time=end_time)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "common-blackberry",
-   "metadata": {},
    "source": [
-    "### Hypotesis\n",
+    "### Hypothesis\n",
     "1. Does number of loaded classes is the same as classes of classloader of jar?\n",
     "2. Heap size has correlation with non heap memory?\n",
     "3. Can we model the optmimal resources considering throuput?\n",
     "4. Jlink can minimize the number of classes and memory?"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "therapeutic-shanghai",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
